projects/aequitas/authorisation/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth-svc
  namespace: aequitas-dev
spec:
  ports:
    - port: 7011
      protocol: TCP
      targetPort: 7011
  selector:
    app: auth
