projects/aequitas/authorisation/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: aequitas-dev
  labels:
    app: auth
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: public
  tls:
    - hosts:
        - aequitas-authorization-dev.coherent.in
      secretName: auth-tls
  rules:
    - host: "aequitas-authorization-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 7011
